# speech-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  security_report.yml
.github/workflows/: ci.yml
core/: config.py  database.py  logger.py
handlers/: handle_audio_voice.py  user_commands.py
src/speech_bot/: main.py
src/speech_bot/core/: config.py  database.py  logger.py
src/speech_bot/handlers/: handle_audio_voice.py  user_commands.py
src/speech_bot/utils/: speech_to_text.py  text_utils.py
utils/: speech_to_text.py  text_utils.py
